--- a/Home.html
+++ b/Home.html
@@ -87,7 +87,7 @@
 										<td valign="middle">
 											<input id="Txt" type="text" name="IDSearch" >
 										</td>
-										<td valign="middle">
+										<td valign="middle" >
 											<a href="#Timkiem">
 												<img id="Icon" src="Images/search.png" alt="Icon">
 											</a>
@@ -98,26 +98,69 @@
 							</div>
 							
 						</ul>
-						<div class="Middle">
-							<div class="News">
-								<table class="Tb_Body" border="1px">
-
-									<tr class="Middle">
-										<td>
-
-
-										</td>
-										<td >
-											<div class="Doing">
+						<div id="News">
+							<div class="Middle" >
+								<table class="Tb_Body" border="1px">	
+									<tr>
+										<td class="Avarta">
+											<div >
 											</div>
 										</td>
-										<td> 
-
+										<td >
+											<div >
+											</div>
 										</td>
 									</tr>
-									<tr class="Dead">
-
+									<tr >
+										<td class="Avarta" >
+											<div >
+											</div>
+										</td>
+										<td >
+											<div >
+											</div>
+										</td>
 									</tr>
+									<tr>
+										<td class="Avarta">
+											<div >
+											</div>
+										</td>
+										<td >
+											<div >
+											</div>
+										</td>
+									</tr>
+									<tr>
+										<td class="Avarta">
+											<div >
+											</div>
+										</td>
+										<td >
+											<div >
+											</div>
+										</td>
+									</tr>
+									<tr>
+										<td class="Avarta">
+											<div >
+											</div>
+										</td>
+										<td >
+											<div >
+											</div>
+										</td>
+									</tr>
+									<tr>
+										<td class="Avarta">
+											<div >
+											</div>
+										</td>
+										<td >
+											<div >
+											</div>
+										</td>
+									</tr>	
 								</table>
 							</div>
 						</div>
